generated/ParGramar.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParGramar
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified AbsGramar
import LexGramar

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'        { PT _ (TS _ 1)  }
  '!='       { PT _ (TS _ 2)  }
  '%'        { PT _ (TS _ 3)  }
  '&&'       { PT _ (TS _ 4)  }
  '('        { PT _ (TS _ 5)  }
  ')'        { PT _ (TS _ 6)  }
  '*'        { PT _ (TS _ 7)  }
  '+'        { PT _ (TS _ 8)  }
  '++'       { PT _ (TS _ 9)  }
  ','        { PT _ (TS _ 10) }
  '-'        { PT _ (TS _ 11) }
  '--'       { PT _ (TS _ 12) }
  '/'        { PT _ (TS _ 13) }
  ';'        { PT _ (TS _ 14) }
  '<'        { PT _ (TS _ 15) }
  '<='       { PT _ (TS _ 16) }
  '='        { PT _ (TS _ 17) }
  '=='       { PT _ (TS _ 18) }
  '>'        { PT _ (TS _ 19) }
  '>='       { PT _ (TS _ 20) }
  'bool'     { PT _ (TS _ 21) }
  'break'    { PT _ (TS _ 22) }
  'continue' { PT _ (TS _ 23) }
  'def'      { PT _ (TS _ 24) }
  'else'     { PT _ (TS _ 25) }
  'false'    { PT _ (TS _ 26) }
  'fn'       { PT _ (TS _ 27) }
  'if'       { PT _ (TS _ 28) }
  'int'      { PT _ (TS _ 29) }
  'ref'      { PT _ (TS _ 30) }
  'return'   { PT _ (TS _ 31) }
  'string'   { PT _ (TS _ 32) }
  'true'     { PT _ (TS _ 33) }
  'var'      { PT _ (TS _ 34) }
  'void'     { PT _ (TS _ 35) }
  'while'    { PT _ (TS _ 36) }
  '{'        { PT _ (TS _ 37) }
  '||'       { PT _ (TS _ 38) }
  '}'        { PT _ (TS _ 39) }
  L_Ident    { PT _ (TV _)    }
  L_integ    { PT _ (TI _)    }
  L_quoted   { PT _ (TL _)    }

%%

Ident :: { (AbsGramar.BNFC'Position, AbsGramar.Ident) }
Ident  : L_Ident { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Ident (tokenText $1)) }

Integer :: { (AbsGramar.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (AbsGramar.BNFC'Position, String) }
String   : L_quoted { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (AbsGramar.BNFC'Position, AbsGramar.Program) }
Program
  : ListTopDef { (fst $1, AbsGramar.Program (fst $1) (snd $1)) }

TopDef :: { (AbsGramar.BNFC'Position, AbsGramar.TopDef) }
TopDef
  : FnDef { (fst $1, AbsGramar.Fn (fst $1) (snd $1)) }
  | 'var' Type Item ';' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.VarDef (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $3)) }

FnDef :: { (AbsGramar.BNFC'Position, AbsGramar.FnDef) }
FnDef
  : 'def' Type Ident '(' ListArg ')' Block { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.FnDef (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $3) (snd $5) (snd $7)) }

ListTopDef :: { (AbsGramar.BNFC'Position, [AbsGramar.TopDef]) }
ListTopDef
  : TopDef { (fst $1, (:[]) (snd $1)) }
  | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

Arg :: { (AbsGramar.BNFC'Position, AbsGramar.Arg) }
Arg
  : Type Ident { (fst $1, AbsGramar.Arg (fst $1) (snd $1) (snd $2)) }
  | 'ref' Type Ident { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.ArgRef (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $3)) }

ListArg :: { (AbsGramar.BNFC'Position, [AbsGramar.Arg]) }
ListArg
  : {- empty -} { (AbsGramar.BNFC'NoPosition, []) }
  | Arg { (fst $1, (:[]) (snd $1)) }
  | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (AbsGramar.BNFC'Position, AbsGramar.Block) }
Block
  : '{' ListStmt '}' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Block (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListStmt :: { (AbsGramar.BNFC'Position, [AbsGramar.Stmt]) }
ListStmt
  : {- empty -} { (AbsGramar.BNFC'NoPosition, []) }
  | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

Stmt :: { (AbsGramar.BNFC'Position, AbsGramar.Stmt) }
Stmt
  : ';' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Empty (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | Block { (fst $1, AbsGramar.BStmt (fst $1) (snd $1)) }
  | TopDef { (fst $1, AbsGramar.Decl (fst $1) (snd $1)) }
  | Ident '=' Expr ';' { (fst $1, AbsGramar.Ass (fst $1) (snd $1) (snd $3)) }
  | Ident '++' ';' { (fst $1, AbsGramar.Incr (fst $1) (snd $1)) }
  | Ident '--' ';' { (fst $1, AbsGramar.Decr (fst $1) (snd $1)) }
  | 'return' Expr ';' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Ret (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | 'return' ';' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.VRet (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | 'if' '(' Expr ')' Block { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Cond (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'if' '(' Expr ')' Block 'else' Block { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.CondElse (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
  | 'while' '(' Expr ')' Block { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.While (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | Expr ';' { (fst $1, AbsGramar.SExp (fst $1) (snd $1)) }
  | 'break' ';' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Break (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | 'continue' ';' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Continue (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }

Item :: { (AbsGramar.BNFC'Position, AbsGramar.Item) }
Item
  : Ident { (fst $1, AbsGramar.NoInit (fst $1) (snd $1)) }
  | Ident '=' Expr { (fst $1, AbsGramar.Init (fst $1) (snd $1) (snd $3)) }

Type :: { (AbsGramar.BNFC'Position, AbsGramar.Type) }
Type
  : 'int' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.MyInt (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | 'string' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.MyStr (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | 'bool' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.MyBool (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | 'void' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.MyVoid (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }

Expr6 :: { (AbsGramar.BNFC'Position, AbsGramar.Expr) }
Expr6
  : Ident { (fst $1, AbsGramar.EVar (fst $1) (snd $1)) }
  | Integer { (fst $1, AbsGramar.ELitInt (fst $1) (snd $1)) }
  | 'true' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.ELitTrue (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | 'false' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.ELitFalse (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | 'fn' Ident '(' ListExpr ')' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.EApp (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | String { (fst $1, AbsGramar.EString (fst $1) (snd $1)) }
  | '(' Expr ')' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr5 :: { (AbsGramar.BNFC'Position, AbsGramar.Expr) }
Expr5
  : '-' Expr6 { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Neg (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | '!' Expr6 { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Not (uncurry AbsGramar.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (AbsGramar.BNFC'Position, AbsGramar.Expr) }
Expr4
  : Expr4 MulOp Expr5 { (fst $1, AbsGramar.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (AbsGramar.BNFC'Position, AbsGramar.Expr) }
Expr3
  : Expr3 AddOp Expr4 { (fst $1, AbsGramar.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (AbsGramar.BNFC'Position, AbsGramar.Expr) }
Expr2
  : Expr2 RelOp Expr3 { (fst $1, AbsGramar.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (AbsGramar.BNFC'Position, AbsGramar.Expr) }
Expr1
  : Expr2 '&&' Expr1 { (fst $1, AbsGramar.EAnd (fst $1) (snd $1) (snd $3)) }
  | Expr2 { (fst $1, (snd $1)) }

Expr :: { (AbsGramar.BNFC'Position, AbsGramar.Expr) }
Expr
  : Expr1 '||' Expr { (fst $1, AbsGramar.EOr (fst $1) (snd $1) (snd $3)) }
  | Expr1 { (fst $1, (snd $1)) }

ListExpr :: { (AbsGramar.BNFC'Position, [AbsGramar.Expr]) }
ListExpr
  : {- empty -} { (AbsGramar.BNFC'NoPosition, []) }
  | Expr { (fst $1, (:[]) (snd $1)) }
  | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (AbsGramar.BNFC'Position, AbsGramar.AddOp) }
AddOp
  : '+' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Plus (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | '-' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Minus (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (AbsGramar.BNFC'Position, AbsGramar.MulOp) }
MulOp
  : '*' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Times (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | '/' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Div (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | '%' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.Mod (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (AbsGramar.BNFC'Position, AbsGramar.RelOp) }
RelOp
  : '<' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.LTH (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | '<=' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.LE (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | '>' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.GTH (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | '>=' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.GE (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | '==' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.EQU (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }
  | '!=' { (uncurry AbsGramar.BNFC'Position (tokenLineCol $1), AbsGramar.NE (uncurry AbsGramar.BNFC'Position (tokenLineCol $1))) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err AbsGramar.Program
pProgram = fmap snd . pProgram_internal
}
